Update Blog Posts “2026-01-24-aisec-01-intro”

--- a/_posts/2026-01-24-aisec-01-intro.md
+++ b/_posts/2026-01-24-aisec-01-intro.md
@@ -3,26 +3,32 @@ layout: post
 title: "AI Security: The New Frontier"
 date: 2026-01-24 14:00:00
 author: Tharunaditya Anuganti
-categories: [Cybersecurity, AI Security]
-tags: [artificial-intelligence, llm, prompt-injection]
-excerpt: "Part 1 of the AI Security Series. Understanding the unique threat landscape of Large Language Models and AI Agents."
-series: "AI & LLM Security"
-series_order: 1
-series_description: "Explaining Prompt Injection, Data Poisoning, Model Inversion, and securing AI-integrated applications."
+categories:
+  - Cybersecurity
+  - AI Security
+tags:
+  - artificial-intelligence
+  - llm
+  - prompt-injection
 image: /assets/images/aisec-bg.jpg
+excerpt: Part 1 of the AI Security Series. Understanding the unique threat
+  landscape of Large Language Models and AI Agents.
+series: AI & LLM Security
+series_order: 1
+series_description: Explaining Prompt Injection, Data Poisoning, Model
+  Inversion, and securing AI-integrated applications.
 ---
-
-# Securing the Intelegence
+# Securing the Intelligence
 
 Artificial Intelligence is reshaping the world, but it introduces a massive new attack surface.
 
 ## Top AI Vulnerabilities (OWASP Top 10 for LLMs)
 
-1.  **Prompt Injection**: Trick the model into ignoring its instructions.
-2.  **Insecure Output Handling**: Trusting AI output blindly (XSS/RCE).
-3.  **Training Data Poisoning**: Corrupting the model's knowledge source.
-4.  **Model Denial of Service**: Overloading the expensive inference compute.
-5.  **Sensitive Information Disclosure**: Making the AI leak secrets.
+1. **Prompt Injection**: Trick the model into ignoring its instructions.
+2. **Insecure Output Handling**: Trusting AI output blindly (XSS/RCE).
+3. **Training Data Poisoning**: Corrupting the model's knowledge source.
+4. **Model Denial of Service**: Overloading the expensive inference compute.
+5. **Sensitive Information Disclosure**: Making the AI leak secrets.
 
 ## Prompt Injection Example
 
